# thielson

thielson1/: .gitignore  WORKSPACE  bazel-bin  bazel-genfiles  bazel-guernsey3  bazel-out  bazel-testlogs  package-lock.json  package.json  protractor.conf.js
thielson1/.project/: .bazelproject
thielson1/java/com/guernsey/example/: BUILD.bazel  app.component.js  app.module.ts  main.js  main.ts  tsconfig.json
thielson1/java/com/guernsey/example/hello-world/: BUILD.bazel  hello-world.component.js  hello-world.component.scss  hello-world.component.spec.js  hello-world.component.ts
thielson1/java/com/guernsey/example/reducers/: BUILD.bazel
thielson1/java/com/guernsey/example/todos/: BUILD.bazel  todos.component.js  todos.component.scss  todos.component.ts  todos.module.js
thielson1/java/com/thielson/example/: BUILD.bazel  app.module.js  app.module.ts  tsconfig.json
thielson1/java/com/thielson/example/hello-world/: BUILD.bazel  hello-world.component.scss  hello-world.component.ts  hello-world.module.js
thielson1/java/com/thielson/example/lib/: file.js
thielson1/java/com/thielson/example/reducers/: BUILD.bazel  reducers.js
thielson1/java/com/thielson/example/todos/: BUILD.bazel  todos.component.scss  todos.component.ts
