package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")

sass_binary(
    name = "hello-world-styles",
    src = "hello-world.component.scss",
    deps = ["//java/com/thielson/example/styles:shared"],
)

ng_module(
    name = "hello-world",
    srcs = [
        "hello-world.component.ts",
        "hello-world.module.ts",
    ],
    assets = [
        ":hello-world.component.html",
        ":hello-world-styles",
    ],
    tsconfig = "//java/com/thielson/example:tsconfig.json",
    deps = [
        "//java/com/thielson/example/lib",
        "@rxjs",
    ],
)
