package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")

sass_binary(
    name = "todos-styles",
    src = "todos.component.scss",
    deps = [
        "//java/com/thielson/example/styles:shared"
    ],
)

ng_module(
    name = "todos",
    srcs = [
        "todos.component.ts",
        "todos.module.ts",
    ],
    assets = [
        "todos.component.html",
        ":todos-styles",
    ],
    tsconfig = "//java/com/thielson/example:tsconfig.json",
    deps = [
        "//java/com/thielson/example/lib",
        "//java/com/thielson/example/reducers",
        "@rxjs",
    ],
)
